--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -5,33 +5,40 @@
 	"type": "module",
 	"exports": {
 		"./css": {
-			"types": "./css/index.d.ts",
-			"require": "./css/index.mjs",
-			"import": "./css/index.mjs"
+			"types": "./dist/css/index.d.ts",
+			"require": "./dist/css/index.mjs",
+			"import": "./dist/css/index.mjs"
 		},
 		"./tokens": {
-			"types": "./tokens/index.d.ts",
-			"require": "./tokens/index.mjs",
-			"import": "./tokens/index.mjs"
+			"types": "./dist/tokens/index.d.ts",
+			"require": "./dist/tokens/index.mjs",
+			"import": "./dist/tokens/index.mjs"
 		},
 		"./types": {
-			"types": "./types/index.d.ts",
-			"require": "./types/index.mjs",
-			"import": "./types/index.mjs"
+			"types": "./dist/types/index.d.ts",
+			"require": "./dist/types/index.mjs",
+			"import": "./dist/types/index.mjs"
 		},
 		"./patterns": {
-			"types": "./patterns/index.d.ts",
-			"require": "./patterns/index.mjs",
-			"import": "./patterns/index.mjs"
+			"types": "./dist/patterns/index.d.ts",
+			"require": "./dist/patterns/index.mjs",
+			"import": "./dist/patterns/index.mjs"
 		},
 		"./jsx": {
-			"types": "./jsx/index.d.ts",
-			"require": "./jsx/index.mjs",
-			"import": "./jsx/index.mjs"
+			"types": "./dist/jsx/index.d.ts",
+			"require": "./dist/jsx/index.mjs",
+			"import": "./dist/jsx/index.mjs"
 		},
-		"./styles.css": "./styles.css"
+		"./styles.css": "./dist/styles.css"
+	},
+	"scripts": {
+		"build": "panda codegen"
 	},
 	"devDependencies": {
-		"@pandacss/dev": "^0.32.1"
+		"@pandacss/dev": "^0.32.1",
+		"@repo/preset": "workspace:^"
+	},
+	"peerDependencies": {
+		"solid-js": "^1.8.15"
 	}
 }
