--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,7 @@
 		"ship": "pnpm panda ship -o dist/panda.buildinfo.json"
 	},
 	"peerDependencies": {
-		"solid-js": "^1.8.12"
+		"solid-js": "^1.8.15"
 	},
 	"devDependencies": {
 		"@pandacss/dev": "^0.32.1",
@@ -26,6 +26,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
+		"@repo/preset": "workspace:*",
 		"@repo/style": "workspace:*"
 	}
 }
